--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -168,14 +168,14 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \hypertarget{participants}{%
 \subsubsection{2.1.1. Participants}\label{participants}}
 
-We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to experimental errors (3), an overall deviated tempo (2). As a result, 31 participants (15 female) were included in data analysis. Most participants were right handed (left; 2, both; 2). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
+We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to experimental errors (3), an overall deviated tempo (2). Thirty-one participants (15 female) were included in data analysis. Most participants were right-handed (left; 2, both; 2). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
 
 \hypertarget{apparatus-and-stimuli}{%
 \subsubsection{2.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli}}
 
 A weighted Yamaha MIDI digital piano was used to record participants' performance via Max/MSP on a MacBook Pro with MacOS X Mojave 10.14.3. The laptop and piano were connected to a high-fidelity soundcard (Focusrite Scarlett 6i6) to deliver a metronome and piano sound. All auditory feedback was given to participants through headphones (Audio-Technica ATH-M50X). Sheet music was displayed on a computer monitor in front of the participants. The pitch, onset and offset time of each note, and key velocity profiles were obtained from MIDI data using Max/MSP patchers.
 
-One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen a Day - Play with Ease in Many Keys" by Edna-Mae Burnam and modified for the experiment. It consisted of a 6-measure isochronous melody noted in 4/4 meter. The stimulus was composed in C major to be played with the right hand only. Non-expressive sheet music (i.e., sheet music without expressive notations; see \emph{Figure \ref{fig:stimuli}, A}) was used for the purpose of practice. Expressive notations were added to the non-expressive sheet music for the experiment. They referred to either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). Articulation was notated as either legato or staccato. Legato indicates that musical notes are to be connected and should sound smooth. Staccato requires producing musical notes with shortened duration, keeping them separate from each other. Dynamics was notated in terms of forte and piano. Forte indicates that musical notes should be played loudly whereas piano indicates that musical notes should be played softly. The notation did not include any indication of fingering (i.e., the positioning of the fingers when playing the piano) because the piece was simple and pilot testing had shown that specifying fingering was not required.
+One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen a Day - Play with Ease in Many Keys" by Edna-Mae Burnam and modified for the experiment. It consisted of a 6-measure isochronous melody noted in 4/4 meter. The stimulus was composed in C major to be played with the right hand only. Non-expressive sheet music (i.e., sheet music without expressive notations; see \emph{Figure \ref{fig:stimuli}, A}) was used for the purpose of practice. Expressive notations were added to the non-expressive sheet music for the experiment. They referred to either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). Articulation was notated as either legato or staccato. Legato indicates that musical notes are to be connected and should sound smooth. Staccato requires producing musical notes with shortened duration, keeping them separate from each other. Dynamics was notated as either forte and piano. Forte indicates that musical notes should be played loudly whereas piano indicates that musical notes should be played softly. The notation did not include any indication of fingering (i.e., the positioning of the fingers when playing the piano) because the piece was simple and pilot testing had shown that specifying fingering was not required.
 
 \hypertarget{procedure}{%
 \subsubsection{2.1.3. Procedure}\label{procedure}}
@@ -184,7 +184,7 @@ In order to ensure that participants had sufficient motor skills to perform the 
 
 First, participants were allocated to either the teaching or performing condition and asked to practise the excerpt with notated expressions of either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). As soon as they had produced the excerpt with notated expressions without pitch errors twice consecutively, the test trials began.
 
-In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with notated expressions by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience. Participants played the piece 8 times per expressive technique per condition, so there were 32 trials in total (2 conditions x 2 expressive techniques x 8 trials). The order of the conditions was counterbalanced across participants. The order of the expressive techniques within each condition was also counterbalanced across participants. A leading metronome (80 beats per minute, 8 beats) indicated the target tempo before each trial.
+In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with a notated expression by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience (see details in \emph{\protect\hyperlink{supplemental}{Supplemental Materials}}). Participants played the piece 8 times per expressive technique per condition, so there were 32 trials in total (2 conditions x 2 expressive techniques x 8 trials). The order of the conditions was counterbalanced across participants. The order of the expressive techniques within each condition was also counterbalanced across participants. A leading metronome (80 beats per minute, 8 beats) indicated the target tempo before each trial.
 
 At the end of the experiment, participants filled in a questionnaire asking about their demographic information and experience in piano performance/teaching.
 
@@ -193,11 +193,11 @@ At the end of the experiment, participants filled in a questionnaire asking abou
 
 The experiment had two factors; Condition (teaching vs.~performing) and Expressive Technique (articulation vs.~dynamics). Additionally, the factor Subcomponent was used when analysing data for each subcomponent for each technique separately (i.e., LS; legato vs.~staccato, FP; forte vs.~piano).
 
-Three dependent variables were computed for data analysis. Interonset intervals (IOIs) are the intervals between onsets of adjacent notes and provide a tempo of tempo. Key-overlap time (KOT) is the difference between the offset time of the current tone (i.e., key release time) and the onset time of the ensuing tone and measures the smoothness of musical sequences (Bresin \& Battel, 2000). A positive value indicates smooth legato styles due to overlap between the current and ensuing tone whereas a negative value indicates sharp staccato styles due to separation between the current and ensuing tone. Tone intensity is assessed by key velocity (KV) and measures the loudness of a musical note. The value of KV in MIDI varies between 0 (minimum) and 127 (maximum).
+Three dependent variables were computed for data analysis. Interonset intervals (IOIs) are the intervals between onsets of adjacent notes and provide a tempo of tempo. Key-overlap time (KOT) is the difference between the offset time of the current tone (i.e., key release time) and the onset time of the ensuing tone, and measures the smoothness of musical sequences (Bresin \& Battel, 2000). A positive value indicates smooth legato styles due to overlap between the current and ensuing tone whereas a negative value indicates sharp staccato styles due to separation between the current and ensuing tone. Tone intensity is assessed by key velocity (KV) and measures the loudness of a musical note. The value of KV in MIDI varies between 0 (minimum) and 127 (maximum).
 
-Data cleaning, preprocessing and statistical analysis were performed in R version 3.6.3. Three trials were entirely excluded from data analysis because participants did not follow sheet music or complete performing till the end. Pitch errors were identified by comparing a sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed. For onsets, 5.16\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.24\%, substituted notes; 0.13\%). For offsets, 6.24\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.29\%, substituted notes; 1.17\%). After we removed pitch errors, outliers for IOIs, KOT and KV were defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. Removed outliers were less than 5\% of overall responses for each dependent variable.
+Data cleaning, preprocessing and statistical analysis were performed in R version 3.6.3. For statistical analysis, only 16th notes with expressive notations were included. Three trials were entirely excluded from data analysis because participants did not follow sheet music or complete performing till the end. Pitch errors were identified by comparing a sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using editData package. For onsets, 5.16\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.24\%, substituted notes; 0.13\%). For offsets, 6.24\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.29\%, substituted notes; 1.17\%). After we removed pitch errors, outliers for IOIs, KOT and KV were defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. Removed outliers were less than 5\% of overall responses for each dependent variable.
 
-We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). Paired-sample \emph{t}-tests were performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The ``aov\_car" function in the afex package was used for a repeated-measures ANOVA. For post-hoc comparisons, we used emmeans package to investigate interactions fomr the ANOVA.
+We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon signed-rank tests (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The ``aov\_car" function in the afex package was used for a repeated-measures ANOVA. For post-hoc comparisons, we used emmeans package to investigate interactions from the ANOVA.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-1-1} \caption{\label{fig:stimuli}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.}\label{fig:stim-1}
@@ -213,16 +213,12 @@ All effects are reported as significant at \emph{p} \textless{} .05. We first re
 \hypertarget{interonset-intervals-iois}{%
 \subsubsection{2.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois}}
 
-In order to compare the mean IOIs between the teaching and performing condition, we used a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because the Shapiro-Wilk test showed that the difference\ldots{} was significantly different from the normal distribution.
-
-The Wisconxin Signed-rank test revealed\ldots.
-
-\includegraphics{manuscript_files/figure-latex/ioi-art-1-1.pdf}
+In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution. The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.21{]} while playing the piece with notated articulation (\emph{p} = 0.017; \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{key-overlap-time-kot}{%
 \subsubsection{2.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (F) and a significant interation betweenC Condition and Subcomponent-LS (F). Post-hoc comparisons showed that participants produced shorter staccato in the teaching condition than in the performing condition (t) whereas there was no significant difference in legato between the teaching and performing condition (t).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (F) and a significant interaction between Condition and Subcomponent-LS (F). Post-hoc comparisons showed that participants produced shorter staccato in the teaching condition than in the performing condition (t) whereas there was no significant difference in legato between the teaching and performing condition (t).
 
 We also calculated KOR\ldots{}
 
@@ -238,6 +234,8 @@ We also calculated KOR\ldots{}
 \hypertarget{interonset-intervals-iois-1}{%
 \subsubsection{2.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-1}}
 
+The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.68 (ms), \emph{IQR} = 21.99{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 20.04{]} while playing the piece with notated dynamics (\emph{p} = 0.120; \emph{Figure \ref{fig:ioi-1}}).
+
 \hypertarget{key-velocity-kv-1}{%
 \subsubsection{2.3.2. Key Velocity (KV)}\label{key-velocity-kv-1}}
 
@@ -246,6 +244,10 @@ We also calculated KOR\ldots{}
 
 \hypertarget{key-overlap-time-kot-1}{%
 \subsubsection{2.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-1}}
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-1-1} \caption{\label{fig:ioi-1}Experiment 1: IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-1}
+\end{figure}
 
 \hypertarget{discussion}{%
 \subsection{2.4. Discussion}\label{discussion}}
@@ -261,22 +263,22 @@ We also calculated KOR\ldots{}
 \hypertarget{participants-1}{%
 \subsubsection{3.1.1. Participants}\label{participants-1}}
 
-We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying piano performance at a music school at the time of recruitment. One participant was excluded due to insufficient motor skills (see details in \emph{\protect\hyperlink{procedure-2}{Procedure}}). Twenty participants (9 female) were included in data analysis. Most participants were right handed (left; 2). They had 15.65 years of practice on average (\emph{SD} = 5.67).
+We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying piano performance at a music school at the time of recruitment. One participant was excluded due to insufficient motor skills (see details in \emph{\protect\hyperlink{procedure-2}{Procedure}}). Twenty participants (9 female) were included in data analysis. Most participants were right-handed (left; 2). They had 15.65 years of practice on average (\emph{SD} = 5.67).
 
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{3.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
 
-The same apparatus as Experiment 1 was used. We selected Clementi's Sonatina Op.36 (No.3) in C major as a stimulus because it contained our targeted expressions (i.e., articulation, dynamics) and was relatively simple in terms of motor skills. The first 12 measures of the original piece was used and modified so that it had the almost equal number of data points for each dependent variable (see details in \emph{\protect\hyperlink{analysis-2}{Data analysis}}). The stimulus consisted of a 12-measure isochronous melody notated in 4/4 meter. Non-expressive sheet was used for the purpose of practice (\emph{Figure \ref{fig:stimuli-2}, A}). Expressive notations were added to the non-expressive sheet music for the experiment (\emph{Figure \ref{fig:stimuli-2}, B-C}). These excerpts were confirmed to be musically natural by a doctoral student in piano performance at Liszt Ferenc Academy of Music in Hungary. The fingering was also assigned and confirmed by the same doctoral student.
+The same apparatus as Experiment 1 was used. We selected Clementi's Sonatina Op.36 (No.3) in C major as a stimulus because it contained our targeted expressions (i.e., articulation, dynamics) and was relatively simple in terms of motor skills. The first 12 measures of the original piece was used and modified so that it had the almost equal number of data points for each dependent variable. The stimulus consisted of a 12-measure isochronous melody notated in 4/4 meter. Non-expressive sheet was used for the purpose of practice (\emph{Figure \ref{fig:stimuli-2}, A}). Expressive notations were added to the non-expressive sheet music for the experiment (\emph{Figure \ref{fig:stimuli-2}, B-C}). These excerpts were confirmed to be musically natural by a doctoral student in piano performance at Liszt Ferenc Academy of Music in Hungary. The fingering was also assigned and confirmed by the same doctoral student.
 
 \hypertarget{procedure-2}{%
 \subsubsection{3.1.3. Procedure}\label{procedure-2}}
 
-We employed the similar procedure as Experiment 1. Unlike Experiment 1, all participants were required to memorise the piece without expressive notations (i.e., \emph{Figure \ref{fig:stimuli-2}, A}) prior to the experiment. Those who could not perform the piece twice consecutively within 5 attempts were considered not to have sufficient motor skills to implement musical expressions and excluded from data analysis. Also, we modified the wording of instructions for the teaching and performing condition so that both had the same focus on expressive notations (see details in \emph{\protect\hyperlink{supplemental}{Supplemental Materials}}).
+We employed the same procedure as Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., \emph{Figure \ref{fig:stimuli-2}, A}) prior to the experiment. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations (see details in \emph{\protect\hyperlink{supplemental}{Supplemental Materials}}). Third, participants could choose their preferred tempo from one of the 3 options (100, 110 and 120 beats per minute) as a leading metronome. In order to make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the non-expressive sheet music. As Experiment 1, those who could not perform the piece twice consecutively within 5 attempts were excluded from data analysis. The rest of the procedure was identical to Experiment 1.
 
 \hypertarget{design-and-data-analysis-1}{%
 \subsubsection{3.1.4. Design and data analysis}\label{design-and-data-analysis-1}}
 
-Data cleaning, preprocessing and statistical analysis were identical as Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included to calculate dependent variables. Three trials were entirely excluded from data analysis because participants did not follow sheet music. With the same method as Experiment 1, pitch errors were removed manually. For onsets, 3.32\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 0.09\%). For offsets, 5.11\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 1.88\%). Removed outliers (i.e., responses outside 3 standard deviations from the mean) were less than 5\% of overall responses for each dependent variable.
+Data cleaning, preprocessing and statistical analysis were identical as Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included to calculate dependent variables. Also, IOIs were normalised by their preferred tempo because each participant chose different tempi from the 3 options. Three trials were entirely excluded from data analysis because participants did not follow sheet music. With the same method as Experiment 1, pitch errors were removed manually. For onsets, 3.32\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 0.09\%). For offsets, 5.11\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 1.88\%). Removed outliers (i.e., responses outside 3 standard deviations from the mean) were less than 5\% of overall responses for each dependent variable.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-2-1} \caption{\label{fig:stimuli-2}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 8th notes were included.}\label{fig:stim-2}
@@ -285,8 +287,13 @@ Data cleaning, preprocessing and statistical analysis were identical as Experime
 \hypertarget{results-articulation-1}{%
 \subsection{3.2. Results (Articulation)}\label{results-articulation-1}}
 
+As Experiment 1, we first report results for performance the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli-2}, B}). followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli-2}, C}).
+
 \hypertarget{interonset-intervals-iois-2}{%
 \subsubsection{3.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-2}}
+
+A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.966, \emph{SD} = 0.049{]} than in the performing condition {[}\emph{M} = 0.953, \emph{SD} = 0.040{]} while playing the piece with notated articulation (\emph{t}(19) = 2.47
+, \emph{p} = 0.023; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.033).
 
 \hypertarget{key-overlap-time-kot-2}{%
 \subsubsection{3.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-2}}
@@ -302,6 +309,12 @@ Data cleaning, preprocessing and statistical analysis were identical as Experime
 
 \hypertarget{interonset-intervals-iois-3}{%
 \subsubsection{3.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-3}}
+
+A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.957, \emph{SD} = 0.048{]} and the performing condition {[}\emph{M} = 0.956, \emph{SD} = 0.043{]} while playing the piece with notated articulation (\emph{t}(19) = 0.21, \emph{p} = 0.837; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two condition (\emph{p} = 0.956).
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
+\end{figure}
 
 \hypertarget{key-velocity-kv-3}{%
 \subsubsection{3.3.2. Key Velocity (KV)}\label{key-velocity-kv-3}}
