add previous intro
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -70,8 +70,17 @@ if (!file.exists(here("paper/image"))){
 
 # 1. Introduction
 
+Deliberate teaching has supported human skill transmission over generations and provides a key route for learning [@tomasello_2016; @whiten_2017]. Experts modulate their behaviour so that novices can extract relevant information to learn a novel skill. In particular, adults modulate their speech (motherese) and actions (motionese) when demonstrating a skill to infant learners [@brand_2002; @fernald_1985]. These modulations include slowing down and exaggerating sounds and actions. Similar findings were obtained in studies with adult learners, where exaggerations were observed when native British English speakers were talking to first language English learners [@uther_2007] and when skilled adults were teaching xylophone melodies to novices [@mcellin_2017]. The observed modulations are thought to provide communicative signals that can facilitate learning by affecting attention and memory [@csibra_2009].
 
+Previous research has shown that demonstrators not only adjust their gestures [@campisi_2013] and actions [@fukuyama_2015] to learners' skills but engage in specific action modulations to highlight particular aspects of demonstrated actions. For example, @schaik_2019 showed that adults used specific action modulations for demonstrating different action effects of objects to infants. @NIPS2016_6413 found that demonstrators chose costly movement paths at structurally important points to disambiguate one goal over other possibilities.
 
+Importantly, in some domains teaching requires not only demonstrating *what* to do, but *how* to perform actions. In artistic contexts, novices need to learn how exactly to perform actions by relying on particular techniques [@sloboda_2000]. For example, when playing a piece of music on the piano, it is not sufficient to press the keys in the correct order, but learners need to be able to implement expressive techniques [@juslin_2003]. This raises the question of whether and how experts modulate their actions during demonstration in artistic contexts, where expressivity is an integral part of what learners need to acquire. Studying action modulations that serve the teaching of artistic techniques is of broader theoretical importance: It can show whether action modulations can be used to selectively highlight subtle aspects of actions that define expert performance.
+
+In the present study, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, articulation, loudness) can be modulated at the same time. Specific and subtle aspects of the performance need to be highlighted to teach a respective technique. We asked whether skilled pianists use sound to communicate didactic intentions. Pianists were asked to perform a piece in order to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano). 
+
+If experts rely on generic action modulations, it can be expected that they will play more slowly during demonstration, regardless of the kind of expressive techniques to be taught. To the extent that experts use action modulations to support their teaching of specific expressive techniques, they should produce longer legato and shorter staccato when teaching articulation whereas they should produce louder forte and softer piano when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of the sound while teaching dynamics.
+
+\clearpage
 
 # 2. Experiment 1
 
