--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -159,6 +159,18 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \hypertarget{introduction}{%
 \section{1. Introduction}\label{introduction}}
 
+Deliberate teaching has supported human skill transmission over generations and provides a key route for learning (Tomasello, 2016; Whiten, 2017). Experts modulate their behaviour so that novices can extract relevant information to learn a novel skill. In particular, adults modulate their speech (motherese) and actions (motionese) when demonstrating a skill to infant learners (Brand, Baldwin, \& Ashburn, 2002; Fernald, 1985). These modulations include slowing down and exaggerating sounds and actions. Similar findings were obtained in studies with adult learners, where exaggerations were observed when native British English speakers were talking to first language English learners (Uther, Knoll, \& Burnham, 2007) and when skilled adults were teaching xylophone melodies to novices (McEllin, Knoblich, \& Sebanz, 2017). The observed modulations are thought to provide communicative signals that can facilitate learning by affecting attention and memory (Csibra \& Gergely, 2009).
+
+Previous research has shown that demonstrators not only adjust their gestures (Campisi \& Özyürek, 2013) and actions (Fukuyama et al., 2015) to learners' skills but engage in specific action modulations to highlight particular aspects of demonstrated actions. For example, Schaik, Meyer, Ham, and Hunnius (2019) showed that adults used specific action modulations for demonstrating different action effects of objects to infants. Ho, Littman, MacGlashan, Cushman, and Austerweil (2016) found that demonstrators chose costly movement paths at structurally important points to disambiguate one goal over other possibilities.
+
+Importantly, in some domains teaching requires not only demonstrating \emph{what} to do, but \emph{how} to perform actions. In artistic contexts, novices need to learn how exactly to perform actions by relying on particular techniques (Sloboda, 2000). For example, when playing a piece of music on the piano, it is not sufficient to press the keys in the correct order, but learners need to be able to implement expressive techniques (Juslin, 2003). This raises the question of whether and how experts modulate their actions during demonstration in artistic contexts, where expressivity is an integral part of what learners need to acquire. Studying action modulations that serve the teaching of artistic techniques is of broader theoretical importance: It can show whether action modulations can be used to selectively highlight subtle aspects of actions that define expert performance.
+
+In the present study, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, articulation, loudness) can be modulated at the same time. Specific and subtle aspects of the performance need to be highlighted to teach a respective technique. We asked whether skilled pianists use sound to communicate didactic intentions. Pianists were asked to perform a piece in order to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano).
+
+If experts rely on generic action modulations, it can be expected that they will play more slowly during demonstration, regardless of the kind of expressive techniques to be taught. To the extent that experts use action modulations to support their teaching of specific expressive techniques, they should produce longer legato and shorter staccato when teaching articulation whereas they should produce louder forte and softer piano when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of the sound while teaching dynamics.
+
+\clearpage
+
 \hypertarget{experiment-1}{%
 \section{2. Experiment 1}\label{experiment-1}}
 
@@ -354,8 +366,47 @@ All authors have no conflict of interest.
 
 \hypertarget{refs}{}
 \begin{cslreferences}
+\leavevmode\hypertarget{ref-brand_2002}{}%
+Brand, R. J., Baldwin, D. A., \& Ashburn, L. A. (2002). Evidence for ``motionese'': Modifications in mothers' infant-directed action. \emph{Developmental Science}, \emph{5}(1), 72--83. \url{https://doi.org/10.1111/1467-7687.00211}
+
 \leavevmode\hypertarget{ref-bresin_2000}{}%
 Bresin, R., \& Battel, G. U. (2000). Articulation Strategies in Expressive Piano Performance Analysis of Legato, Staccato, and Repeated Notes in Performances of the Andante Movement of Mozart's Sonata in G Major (K 545). \emph{Journal of New Music Research}, \emph{29}(3), 211--224. \url{https://doi.org/10.1076/jnmr.29.3.211.3092}
+
+\leavevmode\hypertarget{ref-campisi_2013}{}%
+Campisi, E., \& Özyürek, A. (2013). Iconicity as a communicative strategy: Recipient design in multimodal demonstrations for adults and children. \emph{Journal of Pragmatics}, \emph{47}(1), 14--27. \url{https://doi.org/10.1016/j.pragma.2012.12.007}
+
+\leavevmode\hypertarget{ref-csibra_2009}{}%
+Csibra, G., \& Gergely, G. (2009). Natural pedagogy. \emph{Trends in Cognitive Sciences}, \emph{13}(4), 148--153. \url{https://doi.org/10.1016/j.tics.2009.01.005}
+
+\leavevmode\hypertarget{ref-fernald_1985}{}%
+Fernald, A. (1985). Four-month-old infants prefer to listen to motherese. \emph{Infant Behavior and Development}, \emph{8}(2), 181--195. \url{https://doi.org/10.1016/S0163-6383(85)80005-9}
+
+\leavevmode\hypertarget{ref-fukuyama_2015}{}%
+Fukuyama, H., Qin, S., Kanakogi, Y., Nagai, Y., Asada, M., \& Myowa-Yamakoshi, M. (2015). Infant's action skill dynamically modulates parental action demonstration in the dyadic interaction. \emph{Developmental Science}, \emph{18}(6), 1006--1013. \url{https://doi.org/10.1111/desc.12270}
+
+\leavevmode\hypertarget{ref-NIPS2016_6413}{}%
+Ho, M. K., Littman, M., MacGlashan, J., Cushman, F., \& Austerweil, J. L. (2016). Showing versus doing: Teaching by demonstration. In D. D. Lee, M. Sugiyama, U. V. Luxburg, I. Guyon, \& R. Garnett (Eds.), \emph{Advances in neural information processing systems 29} (pp. 3027--3035). Curran Associates, Inc.
+
+\leavevmode\hypertarget{ref-juslin_2003}{}%
+Juslin, P. N. (2003). Five Facets of Musical Expression: A Psychologist's Perspective on Music Performance. \emph{Psychology of Music}, \emph{31}(3), 273--302. \url{https://doi.org/10.1177/03057356030313003}
+
+\leavevmode\hypertarget{ref-mcellin_2017}{}%
+McEllin, L., Knoblich, G., \& Sebanz, N. (2017). Distinct kinematic markers of demonstration and joint action coordination? Evidence from virtual xylophone playing. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{44}(6), 885. \url{https://doi.org/10.1037/xhp0000505}
+
+\leavevmode\hypertarget{ref-schaik_2019}{}%
+Schaik, J. E. van, Meyer, M., Ham, C. R. van, \& Hunnius, S. (2019). Motion tracking of parents' infant- versus adult-directed actions reveals general and action-specific modulations. \emph{Developmental Science}, \emph{0}(0), e12869. \url{https://doi.org/10.1111/desc.12869}
+
+\leavevmode\hypertarget{ref-sloboda_2000}{}%
+Sloboda, J. A. (2000). Individual differences in music performance. \emph{Trends in Cognitive Sciences}, \emph{4}(10), 397--403. \url{https://doi.org/10.1016/S1364-6613(00)01531-X}
+
+\leavevmode\hypertarget{ref-tomasello_2016}{}%
+Tomasello, M. (2016). The ontogeny of cultural learning. \emph{Current Opinion in Psychology}, \emph{8}, 1--4. \url{https://doi.org/10.1016/j.copsyc.2015.09.008}
+
+\leavevmode\hypertarget{ref-uther_2007}{}%
+Uther, M., Knoll, M. A., \& Burnham, D. (2007). Do you speak E-NG-L-I-SH? A comparison of foreigner- and infant-directed speech. \emph{Speech Communication}, \emph{49}(1), 2--7. \url{https://doi.org/10.1016/j.specom.2006.10.003}
+
+\leavevmode\hypertarget{ref-whiten_2017}{}%
+Whiten, A. (2017). Social Learning and Culture in Child and Chimpanzee. \emph{Annual Review of Psychology}, \emph{68}(1), 129--154. \url{https://doi.org/10.1146/annurev-psych-010416-044108}
 \end{cslreferences}
 
 \endgroup
