--- a/experiment-1/analysis/preprocessor/included_summary.Rmd
+++ b/experiment-1/analysis/preprocessor/included_summary.Rmd
@@ -80,10 +80,10 @@ dt_vel_diff[SubNr != 1, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubN
 ### Export only included participants
 data_analysis~.txt are used for data analysis.
 ```{r export-csv, echo = TRUE}
-fwrite(dt_ioi[SubNr != 1 & SubNr != 3 & SubNr != 8 & SubNr != 14 & SubNr != 16], file = here("trimmed", "data_analysis_ioi.txt"), sep = ",")
-fwrite(dt_kot[SubNr != 1 & SubNr != 3 & SubNr != 8 & SubNr != 14 & SubNr != 16], file = here("trimmed", "data_analysis_kot.txt"), sep = ",")
-fwrite(dt_vel[SubNr != 1 & SubNr != 3 & SubNr != 8 & SubNr != 14 & SubNr != 16], file = here("trimmed", "data_analysis_vel.txt"), sep = ",")
-fwrite(dt_vel_diff[SubNr != 1 & SubNr != 3 & SubNr != 8 & SubNr != 14 & SubNr != 16], file = here("trimmed", "data_analysis_vel_diff.txt"), sep = ",")
+fwrite(dt_ioi[SubNr != 1 & SubNr != 3 & SubNr != 8 & SubNr != 14 & SubNr != 16], file = "./trimmed/data_analysis_ioi.txt", sep = ",")
+fwrite(dt_kot[SubNr != 1 & SubNr != 3 & SubNr != 8 & SubNr != 14 & SubNr != 16], file = "./trimmed/data_analysis_kot.txt", sep = ",")
+fwrite(dt_vel[SubNr != 1 & SubNr != 3 & SubNr != 8 & SubNr != 14 & SubNr != 16], file = "./trimmed/data_analysis_vel.txt", sep = ",")
+fwrite(dt_vel_diff[SubNr != 1 & SubNr != 3 & SubNr != 8 & SubNr != 14 & SubNr != 16], file = "./trimmed/data_analysis_vel_diff.txt", sep = ",")
 ```
 
 ```{r export, include = FALSE}
