--- a/experiment-2/analysis/preprocessor/included_summary.Rmd
+++ b/experiment-2/analysis/preprocessor/included_summary.Rmd
@@ -17,23 +17,19 @@ output: html_notebook
 if (!require("data.table")) {install.packages("data.table"); require("data.table")}
 # plot
 if (!require("ggplot2")) {install.packages("ggplot2"); require("ggplot2")}
-if (!require("here")) {install.packages("here"); require("here")}
-
-# set working directory
-here::i_am("included_summary.Rmd")
 
 # read txt files
-dt_ioi <- fread(file = here("trimmed", "data_ioi_1.txt"), sep = ",")
-dt_kor <- fread(file = here("trimmed", "data_kor.txt"), sep = ",")
-dt_kot <- fread(file = here("trimmed", "data_kot.txt"), sep = ",")
-dt_vel <- fread(file = here("trimmed", "data_vel.txt"), sep = ",")
-dt_vel_diff <- fread(file = here("trimmed", "data_vel_diff.txt"), sep = ",")
+dt_ioi <- fread(file = "./trimmed/data_ioi_1.txt", sep = ",")
+dt_kor <- fread(file = "./trimmed/data_kor.txt", sep = ",")
+dt_kot <- fread(file = "./trimmed/data_kot.txt", sep = ",")
+dt_vel <- fread(file = "./trimmed/data_vel.txt", sep = ",")
+dt_vel_diff <- fread(file = "./trimmed/data_vel_diff.txt", sep = ",")
 ```
 
 # Design
 - Each performance (1 trial) contains 72 responses for onsets and 72 responses for offsets (i.e., if there is no mistake, 144 responses in total)
 - Each block contains 8 trials and there are 4 blocks (teaching vs. performing x articulation vs. dynamics)
-- Note: SubNr 3 was excluded due to insufficient motor skills
+- Note: SubNr 3 was excluded due to insufficient motor skills. SubNr 2 was excluded due to a deviated tempo.
 
 ### IOIs (All)
 ```{r ioi, echo = FALSE}
@@ -91,9 +87,9 @@ dt_vel_diff[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Conditi
 ### Export only included participants
 data_analysis~.txt are used for data analysis.
 ```{r export, echo = TRUE}
-fwrite(dt_ioi[SubNr != 3], file = here("trimmed", "data_analysis_ioi.txt"), sep = ",")
-fwrite(dt_kor[SubNr != 3], file = here("trimmed", "data_analysis_kor.txt"), sep = ",")
-fwrite(dt_kot[SubNr != 3], file = here("trimmed", "data_analysis_kot.txt"), sep = ",")
-fwrite(dt_vel[SubNr != 3], file = here("trimmed", "data_analysis_vel.txt"), sep = ",")
-fwrite(dt_vel_diff[SubNr != 3], file = here("trimmed", "data_analysis_vel_diff.txt"), sep = ",")
+fwrite(dt_ioi[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_ioi.txt", sep = ",")
+fwrite(dt_kor[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_kor.txt", sep = ",")
+fwrite(dt_kot[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_kot.txt", sep = ",")
+fwrite(dt_vel[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_vel.txt", sep = ",")
+fwrite(dt_vel_diff[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_vel_diff.txt", sep = ",")
 ```
