update analysis without subnr 2
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/experiment-2/analysis/stats/dynamics.Rmd
+++ b/experiment-2/analysis/stats/dynamics.Rmd
@@ -18,6 +18,7 @@ Description: This is a summary of dynamics analysis.
 - Participants will exaggerate forte and piano more while teaching.
 
 2. Excluded participants
+- SubNr 2: A deviated tempo
 - SubNr 3: Insufficient motor skills
 
 3. Stats packages
