--- a/experiment-2/analysis/stats/articulation.Rmd
+++ b/experiment-2/analysis/stats/articulation.Rmd
@@ -18,6 +18,7 @@ Description: This is a summary of articulation analysis.
 Participants will exaggerate legato and staccato more while teaching.
 
 2. Excluded participants
+- SubNr 2: A deviated tempo
 - SubNr 3: Insufficient motor skills
 
 3. Stats packages
